--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,8 +1,73 @@
 {
     "tax": 0.07,
-    "duty": 0.0004,
+    "duty": 0.004,
     "wht":0.03 ,
-    "witheld":0.01
+    "witheld":0.01,
+    "motorcode" : 
+    [
+        { 
+            "label" : "110 : รถยนต์นั่งการใช้ส่วนบุคคล",
+            "value" : 110 
+    },{ 
+            "label" : "120 : รถยนต์นั่งการใช้เพื่อการพาณิชย์",
+            "value" : 120 
+    },{ 
+        "label" : "210 : รถยนต์โดยสารการใช้ส่วนบุคคล",
+        "value" : 210 
+},{ 
+    "label" : "220 : รถยนต์โดยสารการใช้เพื่อการพาณิชย์",
+    "value" : 220 
+},{ 
+    "label" : "230 : รถยนต์โดยสารการใช้รับจ้างสาธารณะ",
+    "value" : 230 
+},{ 
+    "label" : "320 : รถยนต์บรรทุกการใช้เพื่อการพาณิชย์",
+    "value" : 320 
+},{ 
+    "label" : "340 : รถยนต์บรรทุกการใช้เพื่อการพาณิชย์พิเศษ",
+    "value" : 340 
+},{ 
+    "label" : "420 : รถยนต์ลากจูงการใช้เพื่อการพาณิชย์",
+    "value" : 420 
+},{ 
+    "label" : "520 : รถยนต์พ่วงการใช้เพื่อการพาณิชย์",
+    "value" : 520 
+},{ 
+    "label" : "540 : รถยนต์พ่วงการใช้เพื่อการพาณิชย์พิเศษ",
+    "value" : 540 
+},
+{ 
+    "label" : "610 : รถจักรยานยนต์การใช้ส่วนบุคคล",
+    "value" : 610 
+},{ 
+    "label" : "620 : รถจักรยานยนต์การใช้เพื่อการพาณิชย์",
+    "value" : 620 
+},{ 
+    "label" : "630 : รถจักรยานยนต์การใช้รับจ้างสาธารณะ",
+    "value" : 630 
+},{ 
+    "label" : "730 : รถยนต์นั่งรับจ้างสาธารณะการใช้รับจ้างสาธารณะ",
+    "value" : 730 
+},{ 
+    "label" : "801 : รถยนต์เบ็ดเตล็ดรถยนต์ป้ายแดง",
+    "value" : 801
+},{ 
+    "label" : "802 : รถยนต์เบ็ดเตล็ดรถพยาบาล",
+    "value" : 802
+},{ 
+    "label" : "803 : รถยนต์เบ็ดเตล็ดรถดับเพลิง",
+    "value" : 803
+},{ 
+    "label" : "804 : รถยนต์เบ็ดเตล็ดรถใช้ในการเกษตร",
+    "value" : 804
+},{ 
+    "label" : "805 : รถยนต์เบ็ดเตล็ดรถใช้ในการก่อสร้าง",
+    "value" : 805
+},{ 
+    "label" : "806 : รถยนต์เบ็ดเตล็ดรถอื่น ๆ",
+    "value" : 806
+}
 
+    ]
 }
  
