--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:18-alpine
 WORKDIR /usr/src/app
+
+# Copy package files and install only production dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm install --only=production
+
+# Copy the rest of your application
 COPY . .
+
 EXPOSE 3000
-CMD [ "node", "server.js" ]
+CMD ["node", "server.js"]
