--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.3.1",
     "datatables.net": "^1.13.6",
+    "framer-motion": "^10.16.16",
     "joi": "^17.10.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
@@ -18,6 +19,7 @@
     "react-cookie": "^6.1.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.0",
